fix overflow-x

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 @media screen and (min-width: 340px) {
